Another quick z-index fix for modal display layering issue

--- a/koala/static/sass/koala.scss
+++ b/koala/static/sass/koala.scss
@@ -682,6 +682,10 @@ textarea.hidden {
     }
 }
 
+.reveal-modal-bg {
+    z-index: 9999998;
+}
+
 .reveal-modal {
     z-index: 9999999;
     h3 {
